--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-      <h1>hello world, we are microverse software developers!</h1>
+    
+      <h1 id="title"></h1>
+    <p id="description" ></p>
+    <form id="survey-form">
+      <input 
+    </form>
+   
     <!--
 
     Hello Camper!
@@ -21,6 +27,7 @@
     - The freeCodeCamp Team
 
     -->
+    
     <script  src="js/index.js"></script>
   </body>
 </html>
