user story 4 to 8

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
-      <h1 id="title"></h1>
-    <p id="description" ></p>
-    <form id="survey-form">
-      <input 
+      <h1 id="title">Microverse Peer Coding</h1>
+    <p id="description" >A peer coding exercise</p>
+    <form id="survey-form" action="#">
+      <label for="name">Full Name</label>
+      <input type="text" id="name" name="name">
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email">
+
+      <label for="number">Number</label>
+      <input type="number" id="number" name="number">
     </form>
    
     <!--
