--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <input type="email" id="email" name="email" placeholder="example@something.com" >
 
       <label id="number-label">Number</label>
-      <input type="number" id="number" name="number"  min = "10"   max = "20" placeholder="1234567890">
-       <dropdown id="dropdown"></dropdown>
+      <input type="number" id="number" name="number"  min = "0"   max = "20" placeholder="1234567890">
+       <select id="dropdown">
     </form>
    
     <!--
