--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
-      <h1 id="title">Medical survey forms</h1>
-    <p id="description" >A peer coding exercise</p>
+      <h1 id="title">Lajoree Hospital User Survey Form </h1>
+    <p id="description" >This medical form is intended improve 
+      our 
+      inventory of medical records for maximum efficiency 
+      and increased quality health delivery</p>
     <form id="survey-form" action="testForm">
       <label id="name-label">Full Name</label>
       <input type="text" id="name" name="name"  placeholder="Example name"> <br>
